assets/css/_global-navigation.scss
// Navigation bar on both desktop and mobile
// Eventually we can phase out _header.scss file, and all relevant styling will be here

header {
  .navbar-logo,
  .navbar-logo:hover,
  .navbar-logo:focus {
    @include base-font__new();
    color: inherit;
    text-decoration: none;

    @include media-breakpoint-up(sm) {
      padding-right: calc(#{$base-spacing});
    }
  }

  .c-svg__mbta-logo,
  .c-svg__mbta-name-and-logo {
    path,
    text {
      fill: currentColor;
    }
  }

  &.header--new {
    position: relative;
    background-color: $brand-primary-dark;
    color: $white;
  }
}


.top-tier-header {
  background-color: $brand-primary-darkest;
  color: $white;
}


[data-nav-open] {
  .body-wrapper {
    overflow: inherit; // same value as on body
    position: relative; // so children elements using `position: absolute` are in the right place
  }

  .m-menu--cover {
    display: block; // display veil
  }
}

nav.m-menu--desktop {
  @include base-font__new();

  display: flex;

  @include media-breakpoint-down(md) {
    display: none;
  }

  .m-menu__language {
    margin-left: calc(#{$base-spacing} / 2);
  }
}

nav.m-top-tier-menu--mobile {
  @include base-font__new();

  display: flex;

  @include media-breakpoint-up(lg) {
    display: none;
  }
}

.m-menu__language {
  align-items: center;
  display: flex;
  flex-wrap: nowrap;
  font-weight: $font-weight-medium;

  .custom-language-selector {
    appearance: none;
    background: transparent;
    border: 0;
    color: $brand-primary-lightest-contrast;
    cursor: pointer;
    margin-left: .25rem;
    outline: none;
    padding: 0 .25rem;
    text-decoration: none;
    width: 5em; // arbitrary, but would be too wide otherwise

    &:hover {
      color: $brand-primary-light;
      text-decoration: underline;
    }

    &:active {
      color: $brand-primary;
      text-decoration: underline;
    }

    &:focus {
      outline: 2px solid $brand-secondary;
    }
  }

  .footer-globe {
    display: none;
  }
}

// Buttons to open/close desktop menu
.m-menu--desktop__toggle {
  align-items: center;
  color: inherit;
  display: flex;
  flex-wrap: nowrap;
  font-weight: bold;
  margin-right: calc(#{$base-spacing} / 2);

  // place for up/down arrows
  .c-indicator--angle {
    @include fa-icon-solid($fa-var-caret-down);
    margin-left: .25rem;
    pointer-events: none;
    @include media-breakpoint-only(xxl) {
      margin-left: .5rem;
    }
  }
  // in expanded menu state
  &[aria-expanded='true'],
  &[aria-expanded='true']:focus,
  &[aria-expanded='true']:hover {
    background: $white;
    border-color: $white;
    color: $brand-primary-dark;
    outline: none;

    .c-indicator--angle {
      @include fa-icon-solid($fa-var-caret-up);
      pointer-events: none;
    }
  }
}

.m-menu--top-tier__toggle {
  margin-right: 0px;
}
// Desktop menu expanded area
.m-menu--desktop__menu {
  background-color: $brand-primary-lightest-contrast;
  box-shadow: 0 7px 14px 0 $gray-shadow;
  display: none; // start off closed
  left: 0;
  overflow: hidden;
  position: absolute;
  right: 0;
  top: $header-navbar-height-new;
  z-index: 102;

  // opened
  .m-menu--desktop__toggle[aria-expanded='true'] + & {
    display: initial;
  }
}

.m-top-tier-menu__menu {
  left: unset;
  padding: 0 1rem;
  top: $header-navbar-height-new - $base-spacing;

  @include media-breakpoint-only(xs) {
    left: unset;
    right: 15px;
    padding: 0 1rem;
    top: $header-navbar-height-xs - 0.5;
  }
}

// Layout the headers & links in the desktop menu
.m-menu-desktop__section {
  color: $body-color;
  column-gap: $base-spacing;
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(0.625rem, 1fr)); // space unknown number of columns evenly
  grid-template-rows: auto 1fr;
  margin: $base-spacing * 2 0;
  margin-top: 1.5rem;

  .m-menu__section-heading {
    grid-row: 1;
    line-height: unset; // smaller heading spacing
  }

  .m-menu-desktop__submenu-section {
    grid-row: 2;
  }

  .m-menu-desktop__section-feature {
    grid-row: 1 / 3;

    .m-menu__feature {
      margin-top: 0;
      width: unset;
    }
  }

  .m-menu__link {
    padding: .5rem 0;
  }

  // Alternate layout for Contact menu
  &.contact {
    grid-template-columns: repeat(3, 1fr); // 3 columns
    grid-template-rows: repeat(3, auto); // 3 rows

    .m-menu-desktop__submenu-section:first-of-type {
      grid-row: 2 / 4;
    }

    .m-menu-feature.emergency-contacts.desktop {
      border-radius: 0 .5rem .5rem;
      grid-row: 3 / 4;
      width: unset;
    }

    .m-menu-desktop__section-feature {
      grid-column: 3 / 4;
      grid-row: 1 / 4;
    }
  }
}

// Small, all-caps bold heading text used in all navigation menus
.m-menu__section-heading {
  font-family: $headings-font-family;
  font-size: $font-size-base-sm;
  font-weight: $headings-font-weight;
  line-height: 1.75;
  margin-bottom: 1rem;
  padding-bottom: .25rem;
  text-transform: uppercase;
  white-space: normal;

  .m-menu--mobile & {
    font-size: $font-size-base-xs;
  }

  .m-menu--desktop & {
    margin: 0;
  }

  .m-menu__feature & {
    font-size: $font-size-base-xs;
    margin-left: unset;
    margin-top: unset;
  }
}

// Reusing the veil component
.m-menu--cover {
  display: none;

  @include media-breakpoint-only(xs) {
    top: $header-navbar-height-xs;
  }

  @include media-breakpoint-up(sm) {
    top: $header-navbar-height-new;
  }
}

// Contact numbers & Popular fares sections
.m-menu__feature {
  background-color: $brand-primary-darkest;
  border-radius: 0 .5rem .5rem 0;
  font-size: $font-size-base-sm;
  margin-bottom: .5rem;
  margin-top: 1rem;
  padding: .75rem;
  width: calc(100% - 2.5rem);

  // Description list
  dl {
    display: grid;
    grid-template-columns: 1fr 1fr;
    margin: 0;
  }

  dt,
  dd {
    border-bottom: 1px solid $brand-primary;
    padding: .5rem 0;

    &:last-of-type {
      border-bottom: unset;
    }

    @include media-breakpoint-up(lg) {
      border-color: $gray-lighter;
    }
  }

  dt {
    font-weight: normal;
  }

  dd {
    font-weight: $headings-font-weight;
    margin-bottom: 0;
    padding-right: 1rem;
    text-align: right;

    &:last-of-type {
      border-bottom: unset;
    }
  }

  small {
    display: block;
    font-size: $font-size-base-xs;
    line-height: 1.75;
    white-space: break-spaces;
  }

  @include media-breakpoint-up(sm) {
    border-radius: 0 .5rem .5rem;
  }

  @include media-breakpoint-up(lg) {
    background-color: $brand-primary-lightest;
    color: $gray-dark;
  }

  // CSS for the Contact Numbers split-container
  &.top-section {
    border-radius: 0 .5rem 0 0;
    margin-bottom: .125rem;
  }

  &.emergency-contacts {
    &.mobile {
      border-radius: 0;
      margin-bottom: .125rem;
      margin-top: 0;

      @include media-breakpoint-up(lg) {
        display: none;
      }
    }
  }

  &.bottom-section {
    border-radius: 0 0 .5rem;
    margin-top: 0;

    @include media-breakpoint-up(sm) {
      border-radius: 0 0 .5rem .5rem;
    }

    .m-menu__feature_phone {
      a {
        font-size: .875rem;
      }
    }
  }
}

.m-menu__feature_phone {
  padding-top: .75rem;
  white-space: normal;

  a {
    @include media-breakpoint-down(md) {
      color: $brand-primary-light-contrast;
      font-size: .875rem;
    }
  }

  > a {
    font-weight: $font-weight-medium;

    @include media-breakpoint-down(md) {
      color: $brand-primary-light-contrast;

      &:hover,
      &:focus {
        color: $brand-primary-light;
      }

      &:active {
        color: $brand-primary;
      }
    }
  }
}

